ecmascript/parser/tests/typescript-errors/tsc/types/tuple/readonlyArraysAndTuples/input.ts.stderr
error[1354]: 'readonly' type modifier is only permitted on array and tuple literal types
  --> $DIR/tests/typescript-errors/tsc/types/tuple/readonlyArraysAndTuples/input.ts:12:12
   |
12 | type T30 = readonly string;  // Error
   |            ^^^^^^^^

error[1354]: 'readonly' type modifier is only permitted on array and tuple literal types
  --> $DIR/tests/typescript-errors/tsc/types/tuple/readonlyArraysAndTuples/input.ts:13:15
   |
13 | type T31<T> = readonly T;  // Error
   |               ^^^^^^^^

error[1354]: 'readonly' type modifier is only permitted on array and tuple literal types
  --> $DIR/tests/typescript-errors/tsc/types/tuple/readonlyArraysAndTuples/input.ts:14:12
   |
14 | type T32 = readonly readonly string[];  // Error
   |            ^^^^^^^^

error[1354]: 'readonly' type modifier is only permitted on array and tuple literal types
  --> $DIR/tests/typescript-errors/tsc/types/tuple/readonlyArraysAndTuples/input.ts:15:12
   |
15 | type T33 = readonly Array<string>;  // Error
   |            ^^^^^^^^

